docs/api/qiskit/0.25/qiskit.opflow.evolutions.PauliTrotterEvolution.md
---
title: PauliTrotterEvolution
description: API reference for qiskit.opflow.evolutions.PauliTrotterEvolution
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.evolutions.PauliTrotterEvolution
---

# qiskit.opflow\.evolutions.PauliTrotterEvolution

<span id="qiskit.opflow.evolutions.PauliTrotterEvolution" />

`PauliTrotterEvolution(trotter_mode='trotter', reps=1)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/opflow/evolutions/pauli_trotter_evolution.py "view source code")

An Evolution algorithm replacing exponentiated sums of Paulis by changing them each to the Z basis, rotating with an rZ, changing back, and Trotterizing.

More specifically, we compute basis change circuits for each Pauli into a single-qubit Z, evolve the Z by the desired evolution time with an rZ gate, and change the basis back using the adjoint of the original basis change circuit. For sums of Paulis, the individual Pauli evolution circuits are composed together by Trotterization scheme.

**Parameters**

*   **trotter\_mode** (`Union`\[`str`, `TrotterizationBase`, `None`]) – A string (‘trotter’, ‘suzuki’, or ‘qdrift’) to pass to the TrotterizationFactory, or a TrotterizationBase, indicating how to combine individual Pauli evolution circuits to equal the exponentiation of the Pauli sum.
*   **reps** (`Optional`\[`int`]) – How many Trotterization repetitions to make, to improve the approximation accuracy.
*   **TODO uncomment when we implement Abelian grouped evolution.** (*#*) –
*   **group\_paulis** (*#*) – Whether to group Pauli sums into Abelian
*   **sub-groups** (*#*) –
*   **a single diagonalization circuit can be used for each group** (*so*) –
*   **rather than each Pauli.** (*#*) –

### \_\_init\_\_

<span id="qiskit.opflow.evolutions.PauliTrotterEvolution.__init__" />

`__init__(trotter_mode='trotter', reps=1)`

**Parameters**

*   **trotter\_mode** (`Union`\[`str`, `TrotterizationBase`, `None`]) – A string (‘trotter’, ‘suzuki’, or ‘qdrift’) to pass to the TrotterizationFactory, or a TrotterizationBase, indicating how to combine individual Pauli evolution circuits to equal the exponentiation of the Pauli sum.
*   **reps** (`Optional`\[`int`]) – How many Trotterization repetitions to make, to improve the approximation accuracy.
*   **TODO uncomment when we implement Abelian grouped evolution.** (*#*) –
*   **group\_paulis** (*#*) – Whether to group Pauli sums into Abelian
*   **sub-groups** (*#*) –
*   **a single diagonalization circuit can be used for each group** (*so*) –
*   **rather than each Pauli.** (*#*) –

## Methods

|                                                                                                                                                                                                             |                                                                                                                                                   |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.opflow.evolutions.PauliTrotterEvolution.__init__ "qiskit.opflow.evolutions.PauliTrotterEvolution.__init__")(\[trotter\_mode, reps])                                                    | **type trotter\_mode**`Union`\[`str`, `TrotterizationBase`, `None`]                                                                               |
| [`convert`](#qiskit.opflow.evolutions.PauliTrotterEvolution.convert "qiskit.opflow.evolutions.PauliTrotterEvolution.convert")(operator)                                                                     | Traverse the operator, replacing `EvolvedOps` with `CircuitOps` containing Trotterized evolutions equalling the exponentiation of -i \* operator. |
| [`evolution_for_abelian_paulisum`](#qiskit.opflow.evolutions.PauliTrotterEvolution.evolution_for_abelian_paulisum "qiskit.opflow.evolutions.PauliTrotterEvolution.evolution_for_abelian_paulisum")(op\_sum) | Evolution for abelian pauli sum                                                                                                                   |
| [`evolution_for_pauli`](#qiskit.opflow.evolutions.PauliTrotterEvolution.evolution_for_pauli "qiskit.opflow.evolutions.PauliTrotterEvolution.evolution_for_pauli")(pauli\_op)                                | Compute evolution Operator for a single Pauli using a `PauliBasisChange`.                                                                         |

## Attributes

|                                                                                                                               |                                              |
| ----------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------- |
| [`trotter`](#qiskit.opflow.evolutions.PauliTrotterEvolution.trotter "qiskit.opflow.evolutions.PauliTrotterEvolution.trotter") | TrotterizationBase used to evolve SummedOps. |

### convert

<span id="qiskit.opflow.evolutions.PauliTrotterEvolution.convert" />

`convert(operator)`

Traverse the operator, replacing `EvolvedOps` with `CircuitOps` containing Trotterized evolutions equalling the exponentiation of -i \* operator.

**Parameters**

**operator** (`OperatorBase`) – The Operator to convert.

**Return type**

`OperatorBase`

**Returns**

The converted operator.

### evolution\_for\_abelian\_paulisum

<span id="qiskit.opflow.evolutions.PauliTrotterEvolution.evolution_for_abelian_paulisum" />

`evolution_for_abelian_paulisum(op_sum)`

Evolution for abelian pauli sum

**Return type**

`PrimitiveOp`

### evolution\_for\_pauli

<span id="qiskit.opflow.evolutions.PauliTrotterEvolution.evolution_for_pauli" />

`evolution_for_pauli(pauli_op)`

Compute evolution Operator for a single Pauli using a `PauliBasisChange`.

**Parameters**

**pauli\_op** (`PauliOp`) – The `PauliOp` to evolve.

**Return type**

`PrimitiveOp`

**Returns**

A `PrimitiveOp`, either the evolution `CircuitOp` or a `PauliOp` equal to the identity if pauli\_op is the identity.

### trotter

<span id="qiskit.opflow.evolutions.PauliTrotterEvolution.trotter" />

`property trotter`

TrotterizationBase used to evolve SummedOps.

**Return type**

`TrotterizationBase`

